--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-Django==3.0.5
-Pillow==7.0.0
+asgiref==3.2.7
+certifi==2020.4.5.1
+Django==3.0.3
+olefile==0.46
+Pillow==7.1.2
 psycopg2==2.8.4
 psycopg2-binary==2.8.5
 pytz==2019.3
+sqlparse==0.3.1
